# TestsKit

./: README.md  pyproject.toml  requirements.txt  setup.py
selenite/common/: convert.py  predicate.py  random.py  time.py  web_assert.py
selenite/conf/allure/: aaa.py  gherkin.py
selenite/conf/protocol/: socket.py
selenite/conf/python/: etc.py
selenite/conf/settings/project/: selene.py
selenite/core/api/requests/: http_decorator.py
selenite/core/web/generic_page/: edit_page.py  form_page.py  image.py
selenite/core/web/selene/: report.py
selenite/core/web/selenium/: cookie_manager.py
selenite/core/web/webdriver_manager/: set_up.py
selenite/custom/ais/: mock_ais.py
selenite/custom/sql/: sql_helper.py
tests/: pytest.ini
tests/integration/: conftest.py  generic_edit_page_test.py  generic_form_page_test.py  webassert_test.py
tests/integration/helpers/: givenpage.py
tests/resources/: __init__.py
tests/resources/orderapp/: app.js  order.html
tests/unit/: convert_test.py
tests/unit/pytest_example/: conftest.py  pytest_setting_example.py
tests/unit/source_example/: example.json  source_from_json_test.py
testskit/common/: file.py  matching.py  random.py  time.py  web_assert.py
testskit/conf/allure/: aaa.py  gherkin.py
testskit/conf/protocol/: socket.py
testskit/conf/pytest/: options.py
testskit/conf/python/: fp.py  monkey.py
testskit/conf/settings/project/: selene.py
testskit/core/api/requests/: http_decorator.py
testskit/core/web/generic_page/: edit_page.py  form_page.py  image.py
testskit/custom/ais/: mock_ais.py
(+4 files in other folders)
