[tool.poetry]
name = "TestsKit"
version = "0.1.0"
description = "python + pytest + selene + allure automation test project"
authors = ["xgu <g_xin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
allure-pytest = "^2.13.2"
pytest = "^7.2.2"
pytest-html = "^3.2.0"
pytest-rerunfailures = "^11.1.2"
pytest-ordering = "^0.6"
pytest-xdist = "^3.2.1"
selene = {version = "^2.0.0rc2", allow-prereleases = true}
pydantic = "^1.10.6"
pyyaml = "^6.0"
requests = "^2.28.2"
loguru = "^0.6.0"
ddddocr = "^1.4.7"
csvmapper = "^0.7"
scikit-image = "^0.20.0"
pyais = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
